UCF-APR2.4/ftr main/force-app/main/default/objects/FRL_Status_Update__e/FRL_Status_Update__e.object-meta.xml
<CustomObject>
    <description>published by the &quot;Publish Status Update Event&quot; Auto Task (M6 Plan)</description>
    <label>FRL Status Update</label>
    <pluralLabel>FRL Status Updates</pluralLabel>
</CustomObject>