UCF-APR2.4/ftr main/force-app/main/default/objects/FRL_Status_Update__e/fields/Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Plan_Id__c</fullName>
    <label>Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>